--- a/ZopaQuoteEngineTests/ZopaQuoteEngineTests.csproj
+++ b/ZopaQuoteEngineTests/ZopaQuoteEngineTests.csproj
@@ -45,7 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CsvParserTests.cs" />
+    <Compile Include="InputValidationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuoteCalculationEngineTests.cs" />
     <Compile Include="QuoteTransformerTests.cs" />
   </ItemGroup>
   <ItemGroup>
